--- a/noticias-microcemento/8-motivos-microcemento-futuro-reformas.html
+++ b/noticias-microcemento/8-motivos-microcemento-futuro-reformas.html
@@ -293,10 +293,10 @@
                         <div class="contenedorMenuOculto">
                             <div class="contenedorMagenDerecha">
                                 <div class="titular  fadeInRight estiloNormal16justificado">
-                                    <h2 class="h3s">El microcemento es el revestimiento decorativo del presente, pero
-                                        sobre todo del futuro, ya que sus múltiples ventajas frente a otros materiales
+                                    <h2 class="h3s"> <strong>El microcemento es el revestimiento decorativo del presente, pero
+                                        sobre todo del futuro,</strong> ya que sus múltiples ventajas frente a otros materiales
                                         lo convierten en idóneo para la creación de todo tipo de espacios y estilos. A
-                                        continuación te explicamos los principales beneficios del microcemento que te
+                                        continuación te explicamos los <strong>principales beneficios </strong> del microcemento que te
                                         enamorarán y con la que lograrás la casa de tus sueños.</h2>
 
 
@@ -306,7 +306,7 @@
                                     </h2>
                                     <p>La mezcla de los diferentes tipos de pigmentos de color del microcemento ofrece
                                         al usuario una multiplicidad de colores
-                                        con los que dar rienda suelta a su creatividad. Ilimitadas combinaciones que
+                                        con los que dar rienda suelta a su creatividad.  <strong>Ilimitadas combinaciones</strong> que
                                         dotarán de vida propia a cada estancia o
                                         mueble y que reforzarán la personalidad de un hogar único e irrepetible.
                                     </p>
@@ -315,7 +315,7 @@
                                     <h2 class="en3"> 2. Compatible con todas las superficies</h2>
                                     <p>Una de las grandes ventajas del microcemento es su posibilidad de adaptarse
                                         prácticamente a todas las superficies
-                                        existentes gracias a una gran adherencia, por lo que no es necesario eliminar el
+                                        existentes <strong>gracias a una gran adherencia</strong> , por lo que no es necesario eliminar el
                                         material anterior como ocurre en muchas
                                         obras y reformas del hogar. ¡Y nada de tener miedo por si se despega! No
                                         ocurrirá.
@@ -325,7 +325,7 @@
                                         title="Microcemento topciment">
                                     <h2 class="en3"> 3. Alto valor decorativo</h2>
                                     <p>
-                                        El microcemento es aplicable tanto a interiores como exteriores, se adapta a la
+                                        El microcemento es <strong>aplicable tanto a interiores como exteriores</strong> , se adapta a la
                                         perfección a suelos, paredes, techos,
                                         terrazas, piscinas e incluso muebles. Por ello el microcemento posee un alto
                                         valor decorativo porque si puedes
@@ -336,7 +336,7 @@
 
                                         Si apuestas por el microcemento, apuestas también por la resistencia, ya que es
                                         un material que aguanta a la perfección
-                                        frente a la fuerza mecánica, la abrasión o el efecto de los rayos ultravioleta,
+                                        frente <strong>a la fuerza mecánica, la abrasión o el efecto de los rayos ultravioleta</strong> ,
                                         entre otros. No todos los materiales
                                         pueden decir lo mismo.
                                     </p>
@@ -347,48 +347,57 @@
                                         Uno de los mayores quebraderos de cabeza a la hora de hacer reformas en casa es
                                         pensar en los escombros que vas
                                         acumulando a medida que avanzas en la obra. ¡Problema resuelto! Con el
-                                        microcemento no generarás ni un solo escombro y
+                                        microcemento no generarás  <strong>ni un solo escombro</strong> y
                                         lo que es igual de importante, es muy rápido y cómodo de instalar.
                                     </p>
-
+       <img src="../imagenes/news/MICRO_CEMENT21168.jpg"
+                                        class="figure-img img-fluid rounded" alt="Microcemento topciment"
+                                        title="Microcemento topciment">
                                     <h2 class="en3"> 6. Limpieza y mantenimiento
                                     </h2>
                                     <p>
                                         En relación al punto anterior, la limpieza y mantenimiento son de lo más
-                                        sencillos. Con apenas agua y jabón neutro
+                                        sencillos.  <strong>Con apenas agua y jabón neutro</strong>
                                         lograrás que el microcemento esté siempre en perfecto estado y que sus
                                         propiedades sigan intactas.
                                     </p>
+                                        <p> Para lograr una óptima limpieza de este revestimiento decorativo, descubre los  <a class="links"
+                                            href="../sistemas/limpieza-y-cuidado-del-microcemento.html">limpiadores
+                                             </a> que ha diseñado el fabricante de microcemento Topciment. 
+                                     </p>
 
                                     <h2 class="en3"> 7. Grosor
                                     </h2>
                                     <p>A diferencia del cemento alisado, el grosor del microcemento es ínfimo, ya que se
-                                        aplica una fina capa entre 2 y 3 mm.
+                                        aplica una  <strong>fina capa entre 2 y 3 mm.</strong>
                                         De esta manera, aunque se coloque encima de cualquier otra superficie el
                                         resultado final es imperceptible.
                                     </p>
 
                                     <h2 class="en3"> 8. Relación calidad-precio
                                     </h2>
-                                    <img src="../imagenes/news/MICRO_CEMENT21168.jpg"
-                                        class="figure-img img-fluid rounded" alt="Microcemento topciment"
-                                        title="Microcemento topciment">
+                              
                                     <p>
-                                        En último lugar, y no por ello menos importante, la joya de la Corona. El hecho
+                                        En último lugar, y no por ello menos importante, la joya de la Corona.  <strong>El hecho
                                         de no ser necesario eliminar la anterior
-                                        superficie para instalar el microcemento reduce drásticamente el coste total de
+                                        superficie</strong> para instalar el microcemento <strong>reduce drásticamente</strong>  <strong>el coste total</strong>  de
                                         una obra o reforma que no pierde ni un
                                         ápice de distinción y elegancia.</p>
 
                                     <h2 class="en3">Topciment, la mejor elección</h2>
-                                    <p>Topciment es líder en la fabricación de microcemento en España, con una amplia
+                                    <p>Topciment es <strong> líder en la fabricación de microcemento en España</strong>, con una amplia
                                         experiencia desde 2005 que le ha llevado a construir una red de distribuidores
                                         en más de 58 países del mundo. Nuestros productos combinan altas prestaciones,
                                         facilidad de aplicación y unos acabados exclusivos que no encontrarás en ningún
                                         otro lugar.
-                                        <p> <strong> <a class="links" href="../sistemas.html"> ¿A qué estás
-                                                    esperando?</a></strong></p>
+                                        <p>   Conoce los microcementos  exclusivos de Topciment    en nuestro  amplio <strong> <a class="links" href="../descargas.html#catalogo-topciment">  catálogo de productos </a></strong>.</p>
                                     </p>
+
+
+                                    https://www.topciment.com/noticias-microcemento/como-evitar-problemas-con-microcemento.html
+
+                              https://www.topciment.com/noticias-microcemento/precio-del-microcemento.html
+
 
                                     <!--  <img style=" display: block;
                                   margin-left: auto;
