--- a/noticias-microcemento/piscinas-de-microcemento-la-mejor-opcion-posible.html
+++ b/noticias-microcemento/piscinas-de-microcemento-la-mejor-opcion-posible.html
@@ -288,18 +288,18 @@
                         "duration": "1"}'><span class="en2">Piscinas
                                     de microcemento, la mejor opción posible</span>
                             </h1>
-                        </div>
-
+                        </div> 
+ 
                         <div class="contenedorMenuOculto">
                             <div class="contenedorMagenDerecha">
                                 <div class="titular  fadeInRight estiloNormal16justificado">
 
-                                    <p>Tener piscina propia suele ser uno de los sueños más recurrentes. Y es que ¿quién
+                                    <p><strong>Tener piscina propia suele ser uno de los sueños más recurrentes</strong> . Y es que ¿quién
                                         no querría estar todo el día en remojo o en el césped de su casa tomando
                                         tranquilamente el sol?
                                         Por eso, cada vez que imaginamos una piscina, lo hacemos con todo tipo de
                                         características para que no le falte detalle. Y, si queremos lo mejor, una
-                                        piscina de microcemento es la opción perfecta.</p>
+                                        <strong>piscina de microcemento es la opción perfecta.</strong> </p>
 
                                     <img style=" display: block;margin-left: auto;margin-right: auto;"
                                         src="../imagenes/news/proyecto-sardinera03.jpg" alt="Microcemento para piscinas"
@@ -307,37 +307,37 @@
                                     <h2 class="en4">Ventajas de utilizar el microcemento en piscinas</h2>
                                     <p>El uso del microcemento en piscinas ofrece muchos beneficios funcionales y de
                                         mantenimiento:</p>
-                                    <strong>Reduce la suciedad frente a otros materiales.</strong>
+                               <p>     <strong class="en6">Reduce la suciedad frente a otros materiales</strong> </p>
                                     <p>En los diseños convencionales de piscinas donde predomina el azulejo, se acumula
                                         mucha suciedad y moho en las juntas. El microcemento, al no tener juntas y ser
-                                        una superficie continua, no tiene pequeñas grietas que permitan la acumulación
-                                        de suciedad. Por lo tanto, no solo es un material más limpio por norma general,
+                                        una superficie continua, <strong> no tiene pequeñas grietas que permitan la acumulación
+                                        de suciedad.</strong> Por lo tanto, no solo es un material más limpio por norma general,
                                         sino que además permite un mantenimiento mucho más óptimo y fácil. Sin duda,
                                         ¡una gran ventaja!</p>
 
-                                    <strong> Combina con diferentes materiales.</strong>
-                                    <p> El microcemento combina con todo tipo de materiales, por lo que se integra en
-                                        cualquier estilo.
+                                   <p> <strong class="en6"> Combina con diferentes materiales</strong></p>
+                                    <p> El microcemento combina con todo tipo de materiales, por lo que  <strong>se integra en
+                                        cualquier estilo.</strong>
                                         Así, puedes tener el interior de la piscina con microcemento y la corona y su
                                         alrededor de otro material, como madera, por ejemplo.</p>
 
-                                    <strong>Otorga continuidad en el diseño.</strong>
+                                 <p>   <strong class="en6">Otorga continuidad en el diseño</strong></p>
                                     <p> Como hemos dicho, se puede combinar, pero si lo
                                         que se busca es crear continuidad y amplitud, la mejor opción es utilizar el
                                         microcemento para diferentes zonas. Así, parecerá que la piscina tiene un diseño
                                         infinito que aúna todo el exterior. Y es que, con las diferentes granulometrías
                                         en
-                                        las que se presenta y su característica antideslizante, se puede crear un
+                                        las que se presenta y su <strong> característica antideslizante</strong>, se puede crear un
                                         espacio de
                                         diseño libre de resbalones sin ningún problema.</p>
                                     <img style=" display: block;margin-left: auto;margin-right: auto; "
                                         src="../imagenes/news/P1060160.JPG" alt="Microcemento para piscinas"
                                         title="Microcemento para piscinas" /> <br>
-                                    <h2 class="en4"> Atlanttic,
+                                    <h2 class="en4 mb-3"> Atlanttic ,
                                         nuestro microcemento especial para piscinas</h2>
-                                    <p> En Topciment hemos diseñado Atlanttic, nuestro microcemento bicomponente
+                                    <p> En Topciment hemos diseñado  <strong>Atlanttic</strong>, nuestro microcemento bicomponente
                                         desarrollado específicamente para espacios en contacto permanente con agua.
-                                        Permite crear espacios continuos que facilitan la unión entre varias zonas.</p>
+                                       <strong>  Permite crear espacios continuos</strong> que facilitan la unión entre varias zonas.</p>
 
                                     <p> Así, contamos con dos granulometrías diferentes:</p>
                                     <ul>
@@ -354,21 +354,32 @@
                                             ofrece acabados antideslizantes.
                                         </li>
                                     </ul>
-
+ 
                                     <p>Además, <a class="links"
                                             href="../sistemas/atlanttic-microcemento-para-piscinas.html">Atlanttic</a>
-                                        puede utilizarse para diseños exteriores en estanques, terrazas
-                                        y zonas húmedas, por ejemplo, por lo que ofrece muchas posibilidades.
-                                        Tener una piscina es uno de los deseos más comunes, pero tener una piscina de
-                                        microcemento es, sin duda, un sueño.</p>
+                                       <strong> puede utilizarse para  diseños exteriores en estanques, terrazas
+                                        y zonas húmedas </strong>, por ejemplo, por lo que ofrece muchas posibilidades.
+                                      </p>
                                     <p>Tener una piscina es uno de los deseos más comunes, pero tener una piscina de
                                         microcemento es, sin duda, un sueño.</p>
 
-                                    <strong> <a class="links"
-                                            href="../sistemas/atlanttic-microcemento-para-piscinas.html">¿Empezamos?</a>
-                                    </strong>
 
+                                             <h4 class="mb-3">También puede interesarte:</h4>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <a href="https://www.topciment.com/noticias-microcemento/diseno-y-confort-para-espacios-exteriores.html"> <img 
+                                                    class="pull-left mr-3 "
+                                                    src="../imagenes/exteriores/diseno-y-confort-espacios-exteriores.jpg"
+                                                    height="auto"></a>
 
+                                        </div>
+                                        <div class="col-md-8">
+                                            <p>
+                                                <p><a class="links"
+                                                        href="https://www.topciment.com/noticias-microcemento/diseno-y-confort-para-espacios-exteriores.html"><strong>Soluciones actuales para exteriores</strong></a></p>
+                                        </div>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
