--- a/noticias-microcemento/sttandard-noticia.html
+++ b/noticias-microcemento/sttandard-noticia.html
@@ -283,7 +283,7 @@
                             <h1 id="queeselmicrocemento" data-animate-scroll='{"x": "-100",
                     "y": "0",
                     "alpha": "0",
-                    "duration": "1"}'><span style=" padding:5px;">¡Topciment cambia de imagen!</span></h1>
+                    "duration": "1"}'><span style=" padding:5px;"></span></h1>
                         </div>
 
                         <div class="contenedorMenuOculto">
