--- a/de/downloads.html
+++ b/de/downloads.html
@@ -319,7 +319,7 @@
                 </p>
                 <h5 class="card-header mb-3 mt-3">Efectto</h5>
                 <p class="text-dark links-ft">
-                    <a href="../en/data-sheets/Ficha_Tecnica_Efectto_EN.pdf" target="_blank"><i
+                    <a href="technische-datenblatter/Ficha_Tecnica_Efectto_DE.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Efectto Quartz</strong> (Gebrauchsfertig
                         Mikrozement)</a>
                 </p>
@@ -474,9 +474,7 @@
                             href="galerie.html">Projekte</a></strong> an denen wir beteiligt sind.
                     Dank unseres innovativen Geistes, der auf ständige Forschung ausgerichtet ist, wird dieser Katalog
                     etwas Lebendiges und
-                    ständig erneuert. ¡Genießen Sie es! . <strong><a
-                            href="https://www.topciment.com/documento/catalogo-topciment-es.pdf">Download
-                            PDF</a></strong> (5 Mb)</p>
+                    ständig erneuert. ¡Genießen Sie es! .</p>
                 <div class="row  container-fluid ">
                     <div class="col-md-12">
                         <div class="iframe text-center">
