--- a/descargas.html
+++ b/descargas.html
@@ -264,9 +264,9 @@
                 <h4 class="card-header mb-3">Sttandard
                 </h4>
                 <p class="links-ft text-dark">
-                    <a href="fichas-tecnicas/MicrobaseBI-ES.pdf" target="_blank"><i
-                            class="fa fa-file-pdf-o mr-2  "></i><strong>Sttandard Microbase</strong> (microcemento
-                        bicomponente de preparación)</a><br>
+                    <a href="fichas-tecnicas/MicrobaseBI-L-ES.pdf" target="_blank"><i
+                            class="fa fa-file-pdf-o mr-2  "></i><strong>Sttandard Microbase L</strong>
+                        (microcemento bicomponente de preparación)</a><br>
                     <a href="fichas-tecnicas/MicrobaseBI-XL-ES.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Sttandard Microbase XL</strong>
                         (microcemento bicomponente de preparación)</a><br>
@@ -404,6 +404,9 @@
                 <h4 class="card-header mb-3 mt-3"> Topsealer
                 </h4>
                 <p class="text-dark links-ft">
+                     <a href="fichas-tecnicas/TopsealerPro+Fast_ES.pdf" target="_blank"><i
+                            class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer Pro +</strong>
+                        (Barniz sellador bicomponente)</a><br>
                     <a href="fichas-tecnicas/TopsealerWTonecoat-ES.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer WT One
                             Coat</strong>
