--- a/en/downloads.html
+++ b/en/downloads.html
@@ -402,16 +402,19 @@
                 <h5 class="card-header mb-3 mt-3"> Topsealer
                 </h5>
                 <p class="text-dark links-ft">
+                     <a href="data-sheets/TopsealerPro+Fast_EN.pdf" target="_blank"><i
+                            class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer Pro +</strong>
+                        (Two-component sealing varnish)</a><br>
                     <a href="data-sheets/TopsealerWTonecoat-EN.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer WT One
                             Coat</strong>
                         (water-based sealer for micro cement)</a><br>
                     <a href="data-sheets/TopsealerWTquickdry-EN.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer WT Quick
-                            Dry</strong> (Barniz sellador para microcemento de secado rápido)</a><br>
+                            Dry</strong> (Quick-drying microcement sealant)</a><br>
                     <a href="data-sheets/TopsealerWTantiSlip-EN.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer WT Anti
-                            Slip</strong> (Barniz sellador antideslizante)</a><br>
+                            Slip</strong> (Anti-slip sealing varnish)</a><br>
                     <a href="data-sheets/TopsealerDSV-EN.pdf" target="_blank"><i
                             class="fa fa-file-pdf-o mr-2  "></i><strong>Topsealer DSV</strong>(sealant for microcement
                         base solvent)</a><br>
