--- a/en/news.html
+++ b/en/news.html
@@ -297,6 +297,32 @@
                 </div> -->
                 <div class="col-md-12 pr-0 pl-0 ">
                     <div class="row">
+                          <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
+                                <h5 class="card-header"> <a
+                                        href="news-microcement/renovating-your-house-without-building-work.html">Renovate your house without building work and in a short time it is possible</a> <span
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>16/11/2020</span>
+                                </h5>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3"
+                                                        src="../imagenes/news/habitacion-suelo-microcemento -portada.jpg"
+                                                        height="auto" />
+                                                    <p> It's been a few years since you bought your house with all the excitement in the world, but the passage of time has taken its toll. With Topciment's microcement you will be able to reform your house without building work and in a short time. <br>
+                                                    </p>
+                                                    <a href="news-microcement/renovating-your-house-without-building-work.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Read More</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h5 class="card-header"> <a
