--- a/en/systems/atlanttic-microcement-for-pools.html
+++ b/en/systems/atlanttic-microcement-for-pools.html
@@ -468,7 +468,7 @@
                 <div class="contenedorMagenDerecha">
                     <!-- Aplicacion paredes -->
                     <div class="stepwalls mt-5">
-                        <a class="text-dark en3" href="javascript:MostrarOcultar('wall');"><strong>+ PASO A PASO
+                        <a class="text-dark en3" href="javascript:MostrarOcultar('wall');"><strong>+STEP BY STEP 
                             </strong></a>
                         <div class="ocultable" id="wall" style="display: block;">
                             <!-- Paso 1 -->
@@ -483,7 +483,7 @@
 
                                 <div class="col-3 col-md-2"><img src="../../imagenes/atlanttic/stepbystep/roller.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
-                                <!-- Imagen paso a paso -->
+                                <!-- Imagen STEP BY STEP -->
                                 <div class="col-12 col-md-5">
                                     <img src="../../imagenes/atlanttic/stepbystep/paso-1.jpg" class="img-fluid">
                                 </div>
@@ -498,7 +498,7 @@
                                 <!-- Icono -->
                                 <div class="col-3 col-md-2"><img src="../../imagenes/atlanttic/stepbystep/llana.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
-                                <!-- Imagen paso a paso -->
+                                <!-- Imagen STEP BY STEP -->
                                 <div class="col-12 col-md-5">
                                     <img src="../../imagenes/atlanttic/stepbystep/Atlanttic_P2.jpg" class="img-fluid">
                                 </div>
@@ -513,7 +513,7 @@
                                 <!-- Icono -->
                                 <div class="col-3 col-md-2"><img src="../../imagenes/atlanttic/stepbystep/llana.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
-                                <!-- Imagen paso a paso -->
+                                <!-- Imagen STEP BY STEP -->
                                 <div class="col-12 col-md-5">
                                     <img src="../../imagenes/atlanttic/stepbystep/Atlanttic_P3.jpg" class="img-fluid">
                                 </div>
@@ -527,7 +527,7 @@
                                 <!-- Icono -->
                                 <div class="col-3 col-md-2"><img src="../../imagenes/atlanttic/stepbystep/llana.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
-                                <!-- Imagen paso a paso -->
+                                <!-- Imagen STEP BY STEP -->
                                 <div class="col-12 col-md-5">
                                     <img src="../../imagenes/atlanttic/stepbystep/Atlanttic_P4.jpg" class="img-fluid">
                                 </div>
@@ -541,7 +541,7 @@
                                 <!-- Icono -->
                                 <div class="col-3 col-md-2"><img src="../../imagenes/atlanttic/stepbystep/llana.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
-                                <!-- Imagen paso a paso -->
+                                <!-- Imagen STEP BY STEP -->
                                 <div class="col-12 col-md-5">
                                     <img src="../../imagenes/atlanttic/stepbystep/Atlanttic_P4.jpg" class="img-fluid">
                                 </div>
@@ -558,7 +558,7 @@
                                 <!-- Icono -->
                                 <div class="col-3 col-md-2"><img src="../../imagenes/atlanttic/stepbystep/roller.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
-                                <!-- Imagen paso a paso -->
+                                <!-- Imagen STEP BY STEP -->
                                 <div class="col-12 col-md-5">
                                     <img src="../../imagenes/atlanttic/stepbystep/Atlanttic_P6.jpg" class="img-fluid">
                                 </div>
