--- a/galeria.html
+++ b/galeria.html
@@ -498,7 +498,11 @@
 				<div class="item sttandard paredes techo wow fadeInRight proyectoLeft">
 					<a href="proyecto-carmen-house.html"><img
 							src="imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (2).jpg" width="100%">
-						<div class="textoProyectos">
+								<div class="home_link"> </div>
+							<div class="home_link mt-4">
+							<a href="proyecto-carmen-house.html">VER PROYECTO</a>
+							</div>					
+							<div class="textoProyectos">
 							<br>
 							<br>
 							Carmen House
