--- a/noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html
+++ b/noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html
@@ -308,9 +308,17 @@
                                             microcemento
                                             van a causar
                                             auténtico furor</strong> el año que viene. ¡Toma nota!</p>
-                                    <img src="../imagenes/news/topciment-pared-lavabo-baño-USA.jpg"
-                                        class="figure-img img-fluid rounded" alt="Microcemento topciment"
-                                        title="Microcemento en baños Topciment">
+
+
+                                    <figure class="figure">
+                                        <img src="../imagenes/news/topciment-pared-lavabo-baño-USA.jpg"
+                                            class="figure-img img-fluid " title="Baño con microcemento "
+                                            alt="Baño microcemento gris Topciment">
+                                        <figcaption class="figure-caption">Encimera de baño de microcemento gris y
+                                            paredes de microcemento gris de Topciment.</figcaption>
+                                    </figure>
+
+
                                     <h2 class="en3"> 1. Mayor sensación de amplitud </h2>
                                     <p>
                                         En la mayoría de ocasiones el cuarto de baño es la zona más pequeña de la casa
@@ -354,9 +362,15 @@
                                         ducha de
                                         microcemento, entre otras muchas opciones.
                                     </p>
-                                    <img src="../imagenes/news/topciment-suelo-pared-baño-Bearbeitet-alemania 2.jpg"
-                                        class="figure-img img-fluid rounded" alt="baos con microcemento  topciment"
-                                        title="baños con microcemento">
+                                 
+
+
+                                          <figure class="figure">
+                                        <img src="../imagenes/news/topciment-suelo-pared-baño-Bearbeitet-alemania 2.jpg"
+                                            class="figure-img img-fluid " title="Microcemento baños" alt="Baño con microcemento gris Topciment">
+                                        <figcaption class="figure-caption">Microcemento gris de Topciment aplicado en suelo y paredes de baño.</figcaption>
+                                    </figure>
+
                                     <h2 class="en3"> 4. Limpieza fácil y sencilla
                                     </h2>
                                     <p>
@@ -381,17 +395,19 @@
                                         luminoso, crear una atmosfera relajada. Los baños de microcemento son idóneos
                                         porque potencian la luz natural como si se reflejase sobre ellos, siempre y
                                         cuando sean <strong> colores claros</strong> los empleados.
-                                    </p> 
+                                    </p>
 
                                     <h2 class="en3"> 6. Rapidez en la instalación
                                     </h2>
-                                    <p> <strong> Como la aplicación del microcemento no requiere obrasla instalación será muy
-                                        rápida. </strong> Apenas unas horas después de colocar el material en la superficie o
+                                    <p> <strong> Como la aplicación del microcemento no requiere obrasla instalación
+                                            será muy
+                                            rápida. </strong> Apenas unas horas después de colocar el material en la
+                                        superficie o
                                         mobiliario a elegir, podrás transitar por tu nuevo baño de microcemento sin
                                         problemas. ¿No es fantástico?</p>
-                                    <p >
+                                    <p>
                                         Ya has visto. Conseguir un baño de revista nunca había sido tan fácil. Visita la
-                                        página web de  <a class="links" href="../index.html">
+                                        página web de <a class="links" href="../index.html">
                                             <strong>Topciment</strong></a> y encuentra la inspiración en
                                         nuestras imágenes de <a class="links" href="../galeria.html#banyo"><strong>
                                                 baños de microcemento</strong></a> ¡Te van a encantar!</p>
@@ -419,7 +435,7 @@
                                     </div>
 
                                     <hr>
-                                    <div class="row"> 
+                                    <div class="row">
                                         <div class="col-md-3">
                                             <a href="5-claves-para-una-reforma-de-exito-en-los-cuartos-de-bano.html">
                                                 <img class="pull-left mr-3 "
@@ -439,7 +455,7 @@
 
                                         <div class="co-md-12 ">
                                             <h2 class="en7" style="text-align: center;">
-                                               <strong> Suscríbete a nuestra newsletter</strong></h2>
+                                                <strong> Suscríbete a nuestra newsletter</strong></h2>
                                             <h3 style="font-size: 16px;"> Recibe en tu email consejos para la aplicación
                                                 y cuidado del microcemento,
                                                 las últimas tendencias y novedades de los productos de Topciment.</h3>
