--- a/noticias.html
+++ b/noticias.html
@@ -369,6 +369,33 @@
             <div class="row">
                 <div class="col-md-12 pr-0 pl-0 ">
                     <div class="row">
+                         <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
+                                <h2 class="card-header"> <a
+                                        href="noticias-microcemento/reforma-tu-casa-sin-obras.html">Reformar tu casa sin obras y en poco tiempo es posible </a> <span
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>16/11/2020</span>
+                                </h2>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3"
+                                                        src="imagenes/news/habitacion-suelo-microcemento -portada.jpg"
+                                                        height="auto" />
+                                                    <p> Han pasado ya unos cuantos años desde que te compraste tu casa con toda la ilusión  del mundo, sin embargo el paso del tiempo ha hecho estragos. Con el microcemento de Topciment, revestimiento decorativo de altas pretaciones podrás reformar tu casa sin obras y en poco tiempo. <br>
+                                                    </p>
+                                                    <a href="noticias-microcemento/reforma-tu-casa-sin-obras.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Leer
+                                                        más</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
                       <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a
